k8s/observability/08-tempo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /tempo(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tempo-query-frontend
                port:
                  number: 3200
